Alterando envio de email para utf-8